# gngngnSolver

./: CMakeLists.txt  README.md  main.cpp
core-element/: Constraint.cc  Constraint.hh  Domain.cc  Domain.hh  Variable.cc  Variable.hh
global-constraint/allDiff/: AllDifferent.cc  AllDifferent.hh
solver/: Solver.cc  Solver.hh
